// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button component render with correct button type when defined 1`] = `
<ic-button class="button-size-default button-variant-primary" exportparts="button" type="reset">
  <mock:shadow-root>
    <button class="button" part="button" type="reset">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should correctly render with custom text 1`] = `
<ic-button class="button-size-default button-variant-primary" exportparts="button">
  <mock:shadow-root>
    <button class="button" part="button" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Click Me
</ic-button>
`;

exports[`button component should correctly render with text 1`] = `
<ic-button class="button-size-default button-variant-primary" exportparts="button">
  <mock:shadow-root>
    <button class="button" part="button" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should disable tooltip when prop set 1`] = `
<ic-button class="button-size-default button-variant-icon" disable-tooltip="" exportparts="button" id="test-button" variant="icon">
  <mock:shadow-root>
    <button aria-label="Tooltip text" class="button" part="button" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML for destructive variant 1`] = `
<ic-button class="button-size-default button-variant-destructive" exportparts="button" variant="destructive">
  <mock:shadow-root>
    <button class="button" part="button" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML for secondary variant 1`] = `
<ic-button class="button-size-default button-variant-secondary" exportparts="button" variant="secondary">
  <mock:shadow-root>
    <button class="button" part="button" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML for tertiary variant 1`] = `
<ic-button class="button-size-default button-variant-tertiary" exportparts="button" variant="tertiary">
  <mock:shadow-root>
    <button class="button" part="button" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - appearance light 1`] = `
<ic-button appearance="light" class="button-size-default button-variant-primary light loading" exportparts="button" loading="">
  <mock:shadow-root>
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" type="button">
      <div class="loading-container">
        <ic-loading-indicator appearance="light" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - destructive 1`] = `
<ic-button class="button-size-default button-variant-destructive loading" exportparts="button" loading="" variant="destructive">
  <mock:shadow-root>
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" type="button">
      <div class="loading-container">
        <ic-loading-indicator appearance="light" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - secondary 1`] = `
<ic-button class="button-size-default button-variant-secondary loading" exportparts="button" loading="" variant="secondary">
  <mock:shadow-root>
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" type="button">
      <div class="loading-container">
        <ic-loading-indicator appearance="dark" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - tertiary 1`] = `
<ic-button class="button-size-default button-variant-tertiary loading" exportparts="button" loading="" variant="tertiary">
  <mock:shadow-root>
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" type="button">
      <div class="loading-container">
        <ic-loading-indicator appearance="dark" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading 1`] = `
<ic-button class="button-size-default button-variant-primary loading" exportparts="button" loading="">
  <mock:shadow-root>
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" type="button">
      <div class="loading-container">
        <ic-loading-indicator appearance="light" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render correct HTML with Icon 1`] = `
<ic-button class="button-size-default button-variant-primary" exportparts="button">
  <mock:shadow-root>
    <button class="button" part="button" type="button">
      <div class="icon-container">
        <slot name="icon"></slot>
      </div>
      <slot></slot>
    </button>
  </mock:shadow-root>
  <svg fill="#000000" height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0h24v24H0V0z" fill="none"></path>
    <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"></path>
  </svg>
  Button
</ic-button>
`;

exports[`button component should render icon variant with a tooltip 1`] = `
<ic-button class="button-size-default button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <mock:shadow-root>
    <ic-tooltip placement="bottom" target="ic-button-with-tooltip-test-button">
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" class="button" id="ic-button-with-tooltip-test-button" part="button" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render icon variant with a tooltip based on aria-label 1`] = `
<ic-button class="button-size-default button-variant-icon" exportparts="button" id="test-button" tooltip-placement="top" variant="icon">
  <mock:shadow-root>
    <ic-tooltip label="Tooltip text" placement="top" target="ic-button-with-tooltip-test-button">
      <button aria-label="Tooltip text" class="button" id="ic-button-with-tooltip-test-button" part="button" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render icon variant with a tooltip based on title 1`] = `
<ic-button class="button-size-default button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <mock:shadow-root>
    <ic-tooltip label="Tooltip text" placement="bottom" target="ic-button-with-tooltip-test-button">
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" class="button" id="ic-button-with-tooltip-test-button" part="button" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render with "a" tag when href is passed 1`] = `
<ic-button class="button-size-default button-variant-primary" exportparts="button" href="#">
  <mock:shadow-root>
    <a class="button" href="#" part="button">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should render with defined "a" tag props 1`] = `
<ic-button class="button-size-default button-variant-primary" download="" exportparts="button" href="#" rel="nofollow" target="_blank">
  <mock:shadow-root>
    <a class="button" download="" href="#" part="button" rel="nofollow" target="_blank">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should test aria-describedby is set 1`] = `
<ic-button class="button-size-default button-variant-primary light" exportparts="button" id="ic-button">
  <mock:shadow-root>
    <button aria-describedby="button-description" class="button" part="button" type="button">
      <slot></slot>
    </button>
    <span class="ic-button-describedby" id="button-description">
      This is the button description
    </span>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should test aria-describedby is updated 1`] = `
<ic-button class="button-size-default button-variant-primary light" exportparts="button" id="ic-button">
  <mock:shadow-root>
    <button aria-describedby="button-description" class="button" part="button" type="button">
      <slot></slot>
    </button>
    <span class="ic-button-describedby" id="button-description">
      This is the new description
    </span>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should test button as submit button on form 1`] = `
<ic-button class="button-size-default button-variant-primary light" exportparts="button" form="new-form" id="ic-button" type="submit">
  <mock:shadow-root>
    <button class="button" form="new-form" part="button" type="submit">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should update when method called 1`] = `
<ic-button class="button-size-default button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <mock:shadow-root>
    <ic-tooltip label="Tooltip text" placement="bottom" target="ic-button-with-tooltip-test-button">
      <button aria-label="Tooltip text" class="button" id="ic-button-with-tooltip-test-button" part="button" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </mock:shadow-root>
  Button
</ic-button>
`;

exports[`button component should update when method called 2`] = `
<ic-button class="button-size-default button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <mock:shadow-root>
    <ic-tooltip label="Tooltip text" placement="bottom" target="ic-button-with-tooltip-test-button">
      <button class="button" id="ic-button-with-tooltip-test-button" part="button" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </mock:shadow-root>
  Button
</ic-button>
`;
